--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -8,6 +8,7 @@
   background-color: #4779ee; /* Blue */
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
    border-radius: 10px;
+   z-index: 0;
  
 }
 
